--- a/device-listings-redesign.html
+++ b/device-listings-redesign.html
@@ -714,6 +714,7 @@
                                         <div class="tab-pane fade" id="filter-tab" role="tabpanel"
                                             aria-labelledby="v-pills-profile-tab">
                                             <div class="list-view-hover-wrapper">
+
                                                 <div class="content-wrapper">
                                                     <div class="dropdowns-wrapper no-border p-0">
                                                         <div class="list-view-hover-cross-btn mb-4">
@@ -1294,6 +1295,14 @@
                                             aria-labelledby="v-pills-home-tab">
 
                                             <div class="list-view-hover-wrapper">
+                                                <div class="list-view-hover-cross-btn mb-4">
+                                                    <button id="btn_closeIcon" type="button"
+                                                        class="close no-btn modal-close-btn" data-dismiss="modal">
+                                                        <span>
+                                                            <img src="images/modal-close.svg">
+                                                        </span>
+                                                    </button>
+                                                </div>
                                                 <div class="full-search-row mb-4">
                                                     <div class="search-wrap-standard search-inverse">
                                                         <input type="text" placeholder="Search Action Library"
@@ -1508,6 +1517,16 @@
                                             aria-labelledby="v-pills-settings-tab">
 
                                             <div class="list-view-hover-wrapper">
+
+                                                <div class="list-view-hover-cross-btn mb-4">
+                                                    <button id="btn_closeIcon" type="button"
+                                                        class="close no-btn modal-close-btn" data-dismiss="modal"
+                                                        style="top: 36px !important; right: 36px!important;">
+                                                        <span>
+                                                            <img src="images/modal-close.svg">
+                                                        </span>
+                                                    </button>
+                                                </div>
 
                                                 <div class="query-wizard-exp-wrapper p-0">
                                                     <div class="query-wizard-exp-contents">
@@ -2366,6 +2385,15 @@
                                         <div class="tab-pane fade showa activea" id="customized-view" role="tabpanel"
                                             aria-labelledby="v-pills-home-tab">
                                             <div class="list-view-hover-wrapper">
+                                                <div class="list-view-hover-cross-btn mb-4">
+                                                    <button id="btn_closeIcon" type="button"
+                                                        class="close no-btn modal-close-btn" data-dismiss="modal"
+                                                        style="top: 36px !important; right: 36px!important;">
+                                                        <span>
+                                                            <img src="images/modal-close.svg">
+                                                        </span>
+                                                    </button>
+                                                </div>
                                                 <div class="content-wrapper">
                                                     <div class="dropdowns-wrapper ">
                                                         <div class="dropdown-main-div">
@@ -2881,6 +2909,16 @@
                                             role="tabpanel" aria-labelledby="v-pills-settings-tab">
 
                                             <div class="list-view-hover-wrapper">
+
+                                                <div class="list-view-hover-cross-btn mb-4">
+                                                    <button id="btn_closeIcon" type="button"
+                                                        class="close no-btn modal-close-btn" data-dismiss="modal"
+                                                        style="top: 36px !important; right: 36px!important;">
+                                                        <span>
+                                                            <img src="images/modal-close.svg">
+                                                        </span>
+                                                    </button>
+                                                </div>
 
                                                 <!-- view box row -->
                                                 <div class="view-boxs-wrapper">
