--- a/connector-guide.html
+++ b/connector-guide.html
@@ -290,9 +290,11 @@
                                                 <div class="nav-link accordion p-0">
                                                     <div class="tabs-sidemenu-accord-container">
                                                         <button data-toggle="collapse" data-target="#hardware-submenu0">
-                                                            <img src="images/icon_systems.svg"
-                                                                class="filter-icon-group" />
-                                                            <span>VMware ESXi</span>
+                                                            <!-- <img src="images/icon_systems.svg"
+                                                                class="filter-icon-group" /> -->
+                                                            <span>
+                                                                <strong>VMware ESXi</strong>
+                                                            </span>
                                                         </button>
 
                                                         <div id="hardware-submenu0" class="collapse"
@@ -325,9 +327,12 @@
                                                     <div class="tabs-sidemenu-accord-container">
                                                         <button class="no-arrow-icon" data-toggle="collapse"
                                                             data-target="#">
-                                                            <img src="images/icon_vinventa_license.svg"
-                                                                class="filter-icon-group" />
-                                                            <span>VMware Connector Deployment Pre-requisites</span>
+                                                            <!-- <img src="images/icon_vinventa_license.svg"
+                                                                class="filter-icon-group" /> -->
+                                                            <span>
+                                                                <strong>VMware Connector Deployment
+                                                                    Pre-requisites</strong>
+                                                            </span>
                                                         </button>
                                                     </div>
                                                 </div>
@@ -337,8 +342,11 @@
                                                     role="tab" aria-controls="v-pills-profile" aria-selected="false">
                                                     <div class="tabs-sidemenu-accord-container">
                                                         <button data-toggle="collapse" data-target="#hardware-submenu">
-                                                            <img src="images/icon_user.svg" class="filter-icon-group" />
-                                                            <span>VMware ESXi Connector Settings in vInventa</span>
+                                                            <!-- <img src="images/icon_user.svg" class="filter-icon-group" /> -->
+                                                            <span>
+                                                                <strong>VMware ESXi Connector Settings in
+                                                                    vInventa</strong>
+                                                            </span>
                                                         </button>
 
                                                         <div id="hardware-submenu" class="collapse"
@@ -358,14 +366,15 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="nav-link accordion p-0" id="v-pills-home-tab"
-                                                    data-toggle="pill" href="#v-pills-home" role="tab"
-                                                    aria-controls="v-pills-home" aria-selected="false">
+                                                <div class="nav-link accordions p-0" href="#v-pills-home" role="tab"
+                                                    aria-selected="false">
                                                     <div class="tabs-sidemenu-accord-container">
                                                         <button data-toggle="collapse" data-target="#hardware-submenu1">
-                                                            <img src="images/icon_discoveries.svg"
-                                                                class="filter-icon-group" />
-                                                            <span>VMware ESXi Configuration</span>
+                                                            <!-- <img src="images/icon_discoveries.svg"
+                                                                class="filter-icon-group" /> -->
+                                                            <span>
+                                                                <strong>VMware ESXi Configuration</strong>
+                                                            </span>
                                                         </button>
 
                                                         <!-- <div id="hardware-submenu1" class="collapse"
@@ -384,7 +393,7 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="nav-link accordion p-0" id="v-pills-home-tab"
+                                                <!-- <div class="nav-link accordion p-0" id="v-pills-home-tab"
                                                     data-toggle="pill" href="#v-pills-home" role="tab"
                                                     aria-controls="v-pills-home" aria-selected="true">
                                                     <div class="tabs-sidemenu-accord-container">
@@ -445,7 +454,7 @@
                                                             <span>SSL Settings</span>
                                                         </button>
                                                     </div>
-                                                </div>
+                                                </div> -->
 
                                                 <!-- 
                                             <div class="nav-link accordion p-0" id="v-pills-home-tab" data-toggle="pill"
