--- a/connector-guide.html
+++ b/connector-guide.html
@@ -801,7 +801,8 @@
                                                             " class="tab-title">VMware ESXi Connector Settings in
                                                                         vInventa</h3>
 
-                                                                    <img src="images/top-connector-img.svg" />
+                                                                    <img src="images/top-connector-img.svg"
+                                                                        style="width: 100%;" />
                                                                     <p class="mt-2">
                                                                         From the main menu, go to the Connectors page
                                                                         and
@@ -809,13 +810,14 @@
                                                                     </p>
 
                                                                     <img class="mt-5"
-                                                                        src="images/Click-VMware-ESXi-Tile.svg" />
+                                                                        src="images/Click-VMware-ESXi-Tile.svg"
+                                                                        style="width: 100%;" />
                                                                     <p class="mt-2">
                                                                         Click VMware ESXi Tile
                                                                     </p>
 
-                                                                    <img class="mt-5"
-                                                                        src="images/add-connector-img.svg" />
+                                                                    <img class="mt-5" src="images/add-connector-img.svg"
+                                                                        style="width: 100%;" />
                                                                     <p class="mt-2">
                                                                         Click Add Connection
                                                                     </p>
@@ -1033,7 +1035,8 @@
                                                                     </div>
 
                                                                     <img class="mt-5"
-                                                                        src="images/Click-Save-Configuration.svg" />
+                                                                        src="images/Click-Save-Configuration.svg"
+                                                                        style="width: 100%;" />
 
 
                                                                     <p class="mt-5">
@@ -1117,7 +1120,7 @@
                                                                     </p>
 
                                                                     <div class="guide-img-border-div mt-3">
-                                                                        <img src="images/administration-img.svg" />
+                                                                        <img src="images/users-groups-img.svg" />
                                                                     </div>
 
                                                                     <p class="mt-5">
