--- a/connector-guide.html
+++ b/connector-guide.html
@@ -617,8 +617,8 @@
                                         <div class="col-lg-12 inner-tab-right-section mt-0 p-0">
                                             <div class="grid-table-flow">
                                                 <div class="table-full-scroll">
-                                                    <div
-                                                        class="white-bg system-settings-content-wrapper border-theme inner-tab-content-right-col">
+                                                    <div class="white-bg system-settings-content-wrapper border-theme inner-tab-content-right-col"
+                                                        style="padding-top: 20px;">
                                                         <div class="tab-content" id="v-pills-tabContent">
                                                             <div class="tab-pane fade active show" id="v-pills-home"
                                                                 role="tabpanel" aria-labelledby="v-pills-home-tab">
@@ -716,7 +716,7 @@
 
 
 
-                                                                <div class="col-lg-9 mt-4 pl-0">
+                                                                <div class="col-lg-9 mt-4 p-0 ">
 
                                                                     VMware ESXi is an enterprise-class, type-1
                                                                     hypervisor for deploying and serving virtual
@@ -769,7 +769,7 @@
 
                                                                 </div>
 
-                                                                <div class="col-lg-9 mt-5 pl-0">
+                                                                <div class="col-lg-9 mt-5 p-0">
                                                                     <h3 style="
                                                                 border-bottom: 1px solid #9A9A9A;
                                                                 padding-bottom: 15px;
@@ -794,7 +794,7 @@
                                                                     8.
                                                                 </div>
 
-                                                                <div class="col-lg-9 mt-5 pl-0">
+                                                                <div class="col-lg-9 mt-5 p-0">
                                                                     <h3 style="
                                                                 border-bottom: 1px solid #9A9A9A;
                                                                 padding-bottom: 15px;
