--- a/connector-guide.html
+++ b/connector-guide.html
@@ -424,7 +424,7 @@
 
 
 
-                                                                        <div class="col-lg-9 mt-4 p-0 ">
+                                                                        <div class="col-lg-9 mt-4 pt-2 p-0">
 
                                                                             VMware ESXi is an enterprise-class, type-1
                                                                             hypervisor for deploying and serving virtual
@@ -857,7 +857,7 @@
                                                                                 <!-- <img
                                                                                     src="images/Discovery-Settings-Tab.svg" /> -->
 
-                                                                                <img id="myImg"
+                                                                                <img id="myImg" class="w-50"
                                                                                     src="images/Click-Save-Configuration.svg"
                                                                                     alt="Snow">
                                                                             </div>
@@ -988,7 +988,7 @@
 
 
                                                                             <div class="guide-img-border-div mt-3">
-                                                                                <img id="myImg10"
+                                                                                <img id="myImg10" class="w-50"
                                                                                     src="images/users-groups-img.svg"
                                                                                     alt="">
                                                                             </div>
@@ -1006,7 +1006,7 @@
 
 
                                                                             <div class="guide-img-border-div mt-3">
-                                                                                <img id="myImg11"
+                                                                                <img id="myImg11" class="w-50"
                                                                                     src="images/relevant-details-img.svg"
                                                                                     alt="">
                                                                             </div>
