--- a/connector-guide.html
+++ b/connector-guide.html
@@ -35,8 +35,9 @@
             <div class="menu-trigger" style="display: none">
                 <img src="images/menu-button.svg" />
             </div>
-            <div class="header-logo">
-                <img src="images/logo.svg" class="logo" />
+            <div class="header-logo d-flex align-items-center justify-content-center">
+                <img src="images/logo.svg" class="logo" /> <span class="guide-logo-text">|
+                    Documentation</span>
             </div>
 
 
