--- a/connector-guide.html
+++ b/connector-guide.html
@@ -53,7 +53,7 @@
                             </h3> -->
                             <div class="device-list-main-top mt-2">
                                 <div class="device-list-top-left">
-                                    <div class="page-heading-with-device-list-btn mb-4">
+                                    <div class="page-heading-with-device-list-btn mb-4 guide-main-title">
                                         <div class="page-heading">
                                             VMware ESXi
                                             <div class="breadcumb-flex">
