--- a/connector-guide.html
+++ b/connector-guide.html
@@ -836,7 +836,8 @@
 
                                                                             <p class="mt-3">
                                                                                 For help related queries, please contact
-                                                                                <a href="">support@vinventa.com</a>
+                                                                                <a href="mailto:support@vinventa.com"
+                                                                                    target="_blank">support@vinventa.com</a>
                                                                             </p>
 
 
