--- a/connector-guide.html
+++ b/connector-guide.html
@@ -237,7 +237,7 @@
                                                                             by
                                                                             VMware ESXi:
                                                                             <h3 class="title-guide mt-5 mb-2"
-                                                                                style="color: #4C4C4C;">Devices:</h3>
+                                                                                style="color: #000;">Devices:</h3>
                                                                             <div class="imgs-div mt-3">
                                                                                 <img src="images/user-close-img.svg"
                                                                                     class="mr-3" />
@@ -245,14 +245,14 @@
                                                                             </div>
 
                                                                             <h3 id="api" class="title-guide mt-4 mb-2"
-                                                                                style="color: #4C4C4C;">APIs: </h3>
+                                                                                style="color: #000;">APIs: </h3>
                                                                             vInventa uses the vCenter API to fetch
                                                                             information
                                                                             regarding virtual devices and ESX hosts.
 
                                                                             <h3 id="SupportedVersions"
                                                                                 class="title-guide mt-5 mb-2"
-                                                                                style="color: #4C4C4C;">Supported
+                                                                                style="color: #000;">Supported
                                                                                 Versions: </h3>
 
                                                                             <table class="guide-table">
@@ -284,7 +284,7 @@
                                                                         <div class="col-lg-9 mt-5 p-0">
                                                                             <h3 id="Pre-requisites" style="
                                                                         border-bottom: 1px solid #9A9A9A;
-                                                                        padding-bottom: 15px;
+                                                                        padding-bottom: 15px; color: #000;
                                                                     " class="tab-title">VMware Connector Deployment
                                                                                 Pre-requisites</h3>
 
@@ -312,7 +312,7 @@
                                                                         <div class="col-lg-9 mt-5 p-0">
                                                                             <h3 style="
                                                                         border-bottom: 1px solid #9A9A9A;
-                                                                        padding-bottom: 15px;
+                                                                        padding-bottom: 15px; color: #000;
                                                                     " class="tab-title">VMware ESXi Connector Settings
                                                                                 in
                                                                                 vInventa</h3>
@@ -476,8 +476,7 @@
 
 
                                                                             <p id="ConnectorSettingsTab" class="mt-5">
-                                                                                <strong
-                                                                                    style="color: #4C4C4C;">Connector
+                                                                                <strong style="color: #000;">Connector
                                                                                     Settings Tab </strong>
                                                                             </p>
                                                                             <p class="mt-2">
@@ -579,7 +578,7 @@
 
 
                                                                             <p class="mt-5">
-                                                                                <strong style="color: #4C4C4C;">Delete
+                                                                                <strong style="color: #000;">Delete
                                                                                     Assets:
                                                                                 </strong>
                                                                             </p>
@@ -666,8 +665,7 @@
                                                                             </div>
 
                                                                             <p id="DiscoverySettingsTab" class="mt-5">
-                                                                                <strong
-                                                                                    style="color: #4C4C4C;">Discovery
+                                                                                <strong style="color: #000;">Discovery
                                                                                     Settings Tab </strong>
                                                                             </p>
                                                                             <p class="mt-2">
@@ -719,7 +717,7 @@
 
                                                                             <h3 id="ESXiConfiguration" style="
                                                                         border-bottom: 1px solid #9A9A9A;
-                                                                        padding-bottom: 15px;
+                                                                        padding-bottom: 15px; color: #000;
                                                                     " class="tab-title">VMware ESXi Configuration</h3>
 
                                                                             <p>
@@ -830,7 +828,7 @@
 
                                                                             <h3 style="
                                                                             border-bottom: 1px solid #9A9A9A;
-                                                                            padding-bottom: 15px;
+                                                                            padding-bottom: 15px; color: #000;
                                                                         " class="tab-title">For Questions and Queries
                                                                             </h3>
 
